--- a/src/scss/components/gallery-cards/_card-22.scss
+++ b/src/scss/components/gallery-cards/_card-22.scss
@@ -11,7 +11,7 @@
   }
 
   .frame {
-    color: hsla(0, 0%, 100%, 0.7);
+    color: hsl(0, 0%, 100%);
 
     padding: 30px;
     display: grid;
@@ -58,7 +58,7 @@
   .small {
     display: block;
     margin-block-start: -5px;
-    color: hsla(0, 0%, 100%, 0.5);
+    color: hsl(0, 0%, 100%);
   }
 
   .center {
